@@ -10,6 +10,7 @@ package com.powsybl.openloadflow.network;
 import com.fasterxml.jackson.core.JsonFactory;
 import com.fasterxml.jackson.core.JsonGenerator;
 import com.google.common.base.Stopwatch;
+import com.powsybl.commons.PowsyblException;
 import com.powsybl.commons.report.ReportNode;
 import com.powsybl.openloadflow.graph.GraphConnectivity;
 import com.powsybl.openloadflow.graph.GraphConnectivityFactory;
@@ -28,7 +29,7 @@ import java.nio.file.Path;
 import java.util.*;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static com.powsybl.openloadflow.util.Markers.PERFORMANCE_MARKER;
 
@@ -38,6 +39,8 @@ import static com.powsybl.openloadflow.util.Markers.PERFORMANCE_MARKER;
 public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(LfNetwork.class);
+
+    private static final SlackBusSelector SLACK_BUS_SELECTOR_FALLBACK = new MostMeshedSlackBusSelector();
 
     private final int numCC;
 
@@ -57,6 +60,8 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
 
     private List<LfBus> slackBuses;
 
+    private Set<LfBus> excludedSlackBuses = Collections.emptySet();
+
     private LfGenerator referenceGenerator;
 
     private final List<LfBranch> branches = new ArrayList<>();
@@ -73,13 +78,15 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
 
     private final Map<String, LfLoad> loadsById = new HashMap<>();
 
+    private final Map<String, LfArea> areasById = new HashMap<>();
+
     private final List<LfHvdc> hvdcs = new ArrayList<>();
 
     private final Map<String, LfHvdc> hvdcsById = new HashMap<>();
 
     private final List<LfNetworkListener> listeners = new ArrayList<>();
 
-    private boolean valid = true;
+    private Validity validity = Validity.VALID;
 
     private final GraphConnectivityFactory<LfBus, LfBranch> connectivityFactory;
 
@@ -92,6 +99,23 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
     private final List<LfSecondaryVoltageControl> secondaryVoltageControls = new ArrayList<>();
 
     private final List<LfVoltageAngleLimit> voltageAngleLimits = new ArrayList<>();
+
+    public enum Validity {
+        VALID("Valid"),
+        INVALID_NO_GENERATOR("Network has no generator"),
+        INVALID_NO_GENERATOR_VOLTAGE_CONTROL("Network has no generator with voltage control enabled");
+
+        private final String description;
+
+        Validity(String description) {
+            this.description = description;
+        }
+
+        @Override
+        public String toString() {
+            return this.description;
+        }
+    }
 
     public static class LfVoltageAngleLimit {
         private final String id;
@@ -191,8 +215,18 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
 
     public void updateSlackBusesAndReferenceBus() {
         if (slackBuses == null && referenceBus == null) {
-            SelectedSlackBus selectedSlackBus = slackBusSelector.select(busesByIndex, maxSlackBusCount);
+            List<LfBus> selectableBuses =
+                excludedSlackBuses.isEmpty() ? busesByIndex :
+                    busesByIndex.stream().filter(bus -> !excludedSlackBuses.contains(bus)).toList();
+            SelectedSlackBus selectedSlackBus = slackBusSelector.select(selectableBuses, maxSlackBusCount);
             slackBuses = selectedSlackBus.getBuses();
+            if (slackBuses.isEmpty()) { // ultimate fallback
+                selectedSlackBus = SLACK_BUS_SELECTOR_FALLBACK.select(selectableBuses, maxSlackBusCount);
+                if (selectedSlackBus.getBuses().isEmpty()) {
+                    throw new PowsyblException("No slack bus could be selected");
+                }
+                slackBuses = selectedSlackBus.getBuses();
+            }
             LOGGER.info("Network {}, slack buses are {} (method='{}')", this, slackBuses, selectedSlackBus.getSelectionMethod());
             for (var slackBus : slackBuses) {
                 slackBus.setSlack(true);
@@ -206,6 +240,9 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
                 referenceGenerator = generatorReferenceBus.getLfGenerator();
                 LOGGER.info("Network {}, reference generator is {}", this, referenceGenerator.getId());
                 referenceGenerator.setReference(true);
+            }
+            if (connectivity != null) {
+                connectivity.setMainComponentVertex(slackBuses.get(0));
             }
         }
     }
@@ -266,6 +303,11 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
         bus.getLoads().forEach(load -> load.getOriginalIds().forEach(id -> loadsById.put(id, load)));
     }
 
+    public void addArea(LfArea area) {
+        Objects.requireNonNull(area);
+        areasById.put(area.getId(), area);
+    }
+
     public List<LfBus> getBuses() {
         return busesByIndex;
     }
@@ -280,6 +322,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
     }
 
     public LfBus getReferenceBus() {
+        updateSlackBusesAndReferenceBus();
         return referenceBus;
     }
 
@@ -290,6 +333,18 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
     public List<LfBus> getSlackBuses() {
         updateSlackBusesAndReferenceBus();
         return slackBuses;
+    }
+
+    public Set<LfBus> getExcludedSlackBuses() {
+        return excludedSlackBuses;
+    }
+
+    public void setExcludedSlackBuses(Set<LfBus> excludedSlackBuses) {
+        Objects.requireNonNull(excludedSlackBuses);
+        if (!excludedSlackBuses.equals(this.excludedSlackBuses)) {
+            this.excludedSlackBuses = excludedSlackBuses;
+            invalidateSlackAndReference();
+        }
     }
 
     public LfGenerator getReferenceGenerator() {
@@ -318,6 +373,19 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
     public LfLoad getLoadById(String id) {
         Objects.requireNonNull(id);
         return loadsById.get(id);
+    }
+
+    public Stream<LfArea> getAreaStream() {
+        return areasById.values().stream();
+    }
+
+    public boolean hasArea() {
+        return !areasById.isEmpty();
+    }
+
+    public LfArea getAreaById(String id) {
+        Objects.requireNonNull(id);
+        return areasById.get(id);
     }
 
     public void addHvdc(LfHvdc hvdc) {
@@ -351,6 +419,8 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
     public void updateState(LfNetworkStateUpdateParameters parameters) {
         Stopwatch stopwatch = Stopwatch.createStarted();
 
+        LfNetworkUpdateReport updateReport = new LfNetworkUpdateReport();
+
         for (LfBus bus : busesById.values()) {
             bus.updateState(parameters);
             for (LfGenerator generator : bus.getGenerators()) {
@@ -359,11 +429,16 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
             bus.getShunt().ifPresent(shunt -> shunt.updateState(parameters));
             bus.getControllerShunt().ifPresent(shunt -> shunt.updateState(parameters));
         }
-        for (LfBranch branch : branches) {
-            branch.updateState(parameters);
+        branches.forEach(branch -> branch.updateState(parameters, updateReport));
+        hvdcs.forEach(LfHvdc::updateState);
+
+        if (updateReport.closedSwitchCount + updateReport.openedSwitchCount > 0) {
+            LOGGER.debug("Switches status update: {} closed and {} opened", updateReport.closedSwitchCount, updateReport.openedSwitchCount);
         }
-        for (LfHvdc hvdc : hvdcs) {
-            hvdc.updateState();
+        if (updateReport.connectedBranchSide1Count + updateReport.disconnectedBranchSide1Count
+                + updateReport.connectedBranchSide2Count + updateReport.disconnectedBranchSide2Count > 0) {
+            LOGGER.debug("Branches connection status update: {} connected side 1, {} disconnected side1, {} connected side 2, {} disconnected side 2",
+                    updateReport.connectedBranchSide1Count, updateReport.disconnectedBranchSide1Count, updateReport.connectedBranchSide2Count, updateReport.disconnectedBranchSide2Count);
         }
 
         stopwatch.stop();
@@ -474,6 +549,8 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
         jsonGenerator.writeBooleanField("voltageControl", generator.getGeneratorControlType() == LfGenerator.GeneratorControlType.VOLTAGE);
         jsonGenerator.writeNumberField("minP", generator.getMinP());
         jsonGenerator.writeNumberField("maxP", generator.getMaxP());
+        jsonGenerator.writeNumberField("minTargetP", generator.getMinTargetP());
+        jsonGenerator.writeNumberField("maxTargetP", generator.getMaxTargetP());
     }
 
     public void writeJson(Writer writer) {
@@ -486,7 +563,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
 
             jsonGenerator.writeFieldName("buses");
             jsonGenerator.writeStartArray();
-            List<LfBus> sortedBuses = busesById.values().stream().sorted(Comparator.comparing(LfBus::getId)).collect(Collectors.toList());
+            List<LfBus> sortedBuses = busesById.values().stream().sorted(Comparator.comparing(LfBus::getId)).toList();
             for (LfBus bus : sortedBuses) {
                 jsonGenerator.writeStartObject();
 
@@ -505,7 +582,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
                     }
                 });
 
-                List<LfGenerator> sortedGenerators = bus.getGenerators().stream().sorted(Comparator.comparing(LfGenerator::getId)).collect(Collectors.toList());
+                List<LfGenerator> sortedGenerators = bus.getGenerators().stream().sorted(Comparator.comparing(LfGenerator::getId)).toList();
                 if (!sortedGenerators.isEmpty()) {
                     jsonGenerator.writeFieldName("generators");
                     jsonGenerator.writeStartArray();
@@ -525,7 +602,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
 
             jsonGenerator.writeFieldName("branches");
             jsonGenerator.writeStartArray();
-            List<LfBranch> sortedBranches = branches.stream().sorted(Comparator.comparing(LfBranch::getId)).collect(Collectors.toList());
+            List<LfBranch> sortedBranches = branches.stream().sorted(Comparator.comparing(LfBranch::getId)).toList();
             for (LfBranch branch : sortedBranches) {
                 jsonGenerator.writeStartObject();
 
@@ -580,6 +657,21 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
     }
 
     private void validateBuses(LoadFlowModel loadFlowModel, ReportNode reportNode) {
+        // DC or AC, if no generator, network is dead
+        boolean hasAtLeastOneBusGenerator = false;
+        for (LfBus bus : busesByIndex) {
+            if (!bus.getGenerators().isEmpty()) {
+                hasAtLeastOneBusGenerator = true;
+                break;
+            }
+        }
+        if (!hasAtLeastOneBusGenerator) {
+            // we don't report because this is too much on real networks
+            LOGGER.debug("Network {} has no generator and will be considered dead", this);
+            validity = Validity.INVALID_NO_GENERATOR;
+            return;
+        }
+        // AC requires at least one bus under voltage control
         if (loadFlowModel == LoadFlowModel.AC) {
             boolean hasAtLeastOneBusGeneratorVoltageControlEnabled = false;
             for (LfBus bus : busesByIndex) {
@@ -593,13 +685,13 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
                 if (reportNode != null) {
                     Reports.reportNetworkMustHaveAtLeastOneBusGeneratorVoltageControlEnabled(reportNode);
                 }
-                valid = false;
+                validity = Validity.INVALID_NO_GENERATOR_VOLTAGE_CONTROL;
             }
         }
     }
 
     public void validate(LoadFlowModel loadFlowModel, ReportNode reportNode) {
-        valid = true;
+        validity = Validity.VALID;
         validateBuses(loadFlowModel, reportNode);
     }
 
@@ -620,16 +712,29 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
         Objects.requireNonNull(networkLoader);
         Objects.requireNonNull(parameters);
         List<LfNetwork> lfNetworks = networkLoader.load(network, topoConfig, parameters, reportNode);
+        int deadComponentsCount = 0;
         for (LfNetwork lfNetwork : lfNetworks) {
             ReportNode networkReport = Reports.createNetworkInfoReporter(lfNetwork.getReportNode());
             lfNetwork.fix(parameters.isMinImpedance(), parameters.getLowImpedanceThreshold());
             lfNetwork.validate(parameters.getLoadFlowModel(), networkReport);
-            if (lfNetwork.isValid()) {
-                lfNetwork.reportSize(networkReport);
-                lfNetwork.reportBalance(networkReport);
-            } else {
-                LOGGER.info("Network {} is invalid, no calculation will be done", lfNetwork);
+            switch (lfNetwork.getValidity()) {
+                case VALID -> {
+                    lfNetwork.reportSize(networkReport);
+                    lfNetwork.reportBalance(networkReport);
+                    Reports.reportAngleReferenceBusAndSlackBuses(networkReport, lfNetwork.getReferenceBus().getId(), lfNetwork.getSlackBuses().stream().map(LfBus::getId).toList());
+                    lfNetwork.setReportNode(Reports.includeLfNetworkReportNode(reportNode, lfNetwork.getReportNode()));
+                }
+                case INVALID_NO_GENERATOR_VOLTAGE_CONTROL -> {
+                    LOGGER.info("Network {} is invalid, no calculation will be done", lfNetwork);
+                    // we want to report this
+                    lfNetwork.setReportNode(Reports.includeLfNetworkReportNode(reportNode, lfNetwork.getReportNode()));
+                }
+                case INVALID_NO_GENERATOR -> deadComponentsCount++; // will be reported later on altogether
             }
+        }
+        if (deadComponentsCount > 0) {
+            Reports.reportComponentsWithoutGenerators(reportNode, deadComponentsCount);
+            LOGGER.info("No calculation will be done on {} network(s) that have no generators", deadComponentsCount);
         }
         return lfNetworks;
     }
@@ -650,7 +755,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
             getBranches().stream()
                     .filter(b -> b.getBus1() != null && b.getBus2() != null)
                     .forEach(b -> connectivity.addEdge(b.getBus1(), b.getBus2(), b));
-            connectivity.setMainComponentVertex(getSlackBus());
+            connectivity.setMainComponentVertex(getSlackBuses().get(0));
             // this is necessary to create a first temporary changes level in order to allow
             // some outer loop to change permanently the connectivity (with automation systems for instance)
             // this one will never be reverted
@@ -673,13 +778,14 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
         return listeners;
     }
 
-    public boolean isValid() {
-        return valid;
+    public Validity getValidity() {
+        return validity;
     }
 
     /**
      * Disable transformer voltage control when there is no generator controlling voltage on the connected component
-     * that belong to the not controlled side of the transformer.
+     * that belong to the not controlled side of the transformer. Note that branches in contingency are not taken into
+     * account.
      */
     public void fixTransformerVoltageControls() {
         List<LfBranch> controllerBranches = new ArrayList<>(1);
@@ -709,7 +815,8 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
                 continue;
             }
             boolean noPvBusesInComponent = componentNoPVBusesMap.computeIfAbsent(getConnectivity().getComponentNumber(notControlledSide),
-                k -> getConnectivity().getConnectedComponent(notControlledSide).stream().noneMatch(LfBus::isGeneratorVoltageControlled));
+                k -> getConnectivity().getConnectedComponent(notControlledSide).stream()
+                        .noneMatch(bus -> bus.isGeneratorVoltageControlled() && bus.isGeneratorVoltageControlEnabled()));
             if (noPvBusesInComponent) {
                 branch.setVoltageControlEnabled(false);
                 LOGGER.trace("Transformer {} voltage control has been disabled because no PV buses on not controlled side connected component",
@@ -787,7 +894,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
                 .flatMap(bus -> bus.getVoltageControl(type).orElseThrow().getMergedControllerElements().stream())
                 .filter(Predicate.not(LfElement::isDisabled))
                 .map(element -> (E) element)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<LfBus> getControlledBuses(VoltageControl.Type type) {
@@ -795,7 +902,7 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
                 .filter(bus -> bus.isVoltageControlled(type))
                 .filter(bus -> bus.getVoltageControl(type).orElseThrow().getMergeStatus() == VoltageControl.MergeStatus.MAIN)
                 .filter(bus -> bus.getVoltageControl(type).orElseThrow().isVisible())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public void addOverloadManagementSystem(LfOverloadManagementSystem overloadManagementSystem) {
@@ -804,6 +911,10 @@ public class LfNetwork extends AbstractPropertyBag implements PropertyBag {
 
     public List<LfOverloadManagementSystem> getOverloadManagementSystems() {
         return overloadManagementSystems;
+    }
+
+    public void setGeneratorsInitialTargetPToTargetP() {
+        getBuses().stream().flatMap(b -> b.getGenerators().stream()).forEach(LfGenerator::setInitialTargetPToTargetP);
     }
 
     @Override
